# videos-cleaner

./: .coverage  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  cog.toml  justfile  pyproject.toml  renovate.json
.github/: update-version.sh
.github/workflows/: ci.yaml  release.yaml
src/videos_cleaner/: __init__.py
src/videos_cleaner/adapters/repositories/: factories.py  meta_repository.py  video_repository.py
src/videos_cleaner/controller/: cli.py
src/videos_cleaner/domain/interfaces/: meta_repository.py  video_repository.py
src/videos_cleaner/domain/use_cases/: video_use_case.py
src/videos_cleaner/entities/: cleaner.py  video.py
tests/integration/: conftest.py  test_youtube_data_api.py
tests/units/controllers/: test_cli.py
tests/units/repository/: test_meta_repository.py  test_video_repository.py
tests/units/use_cases/: test_cleaner_use_case.py
