[project]
name = "videos-cleaner"
version = "1.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
  "asyncer>=0.0.8",
  "httpx>=0.28.1",
  "pydantic>=2.11.7",
  "pytest-mock>=3.15.0",
  "structlog>=25.4.0",
  "typer>=0.17.3",
  "wireup>=2.0.1",
]

[project.scripts]
cleaner = "videos_cleaner.controller.cli:app"

[dependency-groups]
dev = [
  "anyio>=4.10.0",
  "pyrefly>=0.31.0",
  "pytest>=8.4.1",
  "pytest-cov>=7.0.0",
  "respx>=0.22.0",
  "ruff>=0.12.11",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = [
  "A",
  "ANN",
  "ARG",
  "ASYNC",
  "B",
  "COM",
  "D",
  "E",
  "F",
  "FBT",
  "FURB",
  "G",
  "I",
  "ICN",
  "INP",
  "LOG",
  "N",
  "PERF",
  "PL",
  "PT",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "T20",
  "TC",
  "TRY",
  "UP",
]
ignore = ["RUF001", "RUF002", "COM812", "D100", "D104", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004", "FBT001", "D"]
"src/videos_cleaner/controller/**" = ["T201"]
